<resources>
    <string name="app_name">Dictionary</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favourite">Favourite</string>
    <string name="history">History</string>
    <string name="word_of_day">Word of Day</string>
    <string name="word">Word</string>
    <string name="search_hint">Search..</string>
    <string name="searching">Searching..</string>
    <string name="search_something">Search Something</string>
    <string name="no_results_found">No results found!!</string>
    <string name="loading">Loading..</string>
    <string name="not_connected">No Internet!!</string>
    <string name="settings">Settings</string>
    <string name="pronunciation">Pronunciation</string>
    <string name="action">Actions</string>
    <string name="email">Email </string>
    <!-- for word of day  WOD stands for WORD_OF_DAY-->
    <string name="WOD_WORD_ID_KEY">word_of_day_word_key</string>
    <string name="WOD_DATE_KEY">word_of_day_date_key</string>

    <!-- for preferences-->
    <!--for language preference-->
    <string name="setting_lang_label">Language</string>
    <string name="setting_lang_default">@string/setting_lang_value_en</string>
    <string name="setting_lang_label_en">English</string>
    <string name="setting_lang_value_en">en</string>
    <string name="setting_lang_label_hi">Hindi</string>
    <string name="setting_lang_value_hi">hi</string>
    <string name="setting_lang_label_es">Espanish</string>
    <string name="setting_lang_value_es">es</string>
    <string name="setting_lang_label_id">Indonesian</string>
    <string name="setting_lang_value_id">id</string>
    <string name="setting_lang_label_ms">Malasay</string>
    <string name="setting_lang_value_ms">ms</string>
    <string name="setting_lang_label_zu">Zulu</string>
    <string name="setting_lang_value_zu">zu</string>
    <!--for sort preference-->
    <!--sort by key value pairs for history-->
    <string name="setting_fav_sort_title">Sort by</string>
    <string name="setting_fav_sort_key">sort_by_favourite_key</string>
    <string name="setting_fav_sort_save_val">save</string>
    <string name="setting_fav_sort_save_label">Save</string>
    <string name="setting_fav_sort_word_val">word</string>
    <string name="setting_fav_sort_word_label">Word</string>
    <string name="setting_fav_sort_default_val">@string/setting_fav_sort_save_val</string>
    <!--sort by key value pairs for history-->
    <string name="history_sort_key">sort_by_history</string>
    <string name="history_sort_search_key">search</string>
    <string name="history_sort_search_value">Search</string>
    <string name="history_sort_word_key">word</string>
    <string name="history_sort_word_value">Word</string>
    <string name="history_sort_default_key">@string/history_sort_search_key</string>
    <string name="history_sort_default_value">@string/history_sort_search_value</string>

    <string name="delete_all">Delete All</string>
    <string name="sort_order">Sort by</string>
    <string name="clear_history">Clear History</string>
    <string name="clear_history_msg">Delete all search history?</string>
    <string name="yes_do">@android:string/ok</string>
    <string name="clear">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all_saved_words">Delete Favourites</string>
    <string name="load_failed">Failed to load data.</string>
    <!--strings for word activity-->
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="unsaved">Unsaved</string>
    <string name="favourite_sort_key">sort_by_favourite</string>
    <string name="clear_fav_word">Delete all saved words?</string>
    <string name="examples">examples: </string>
    <string name="not_conn_msg">You are not Connected.</string>
    <string name="copied_msg">Copied to clipboard.</string>
    <!--fav cab menu-->
    <string name="copy">Copy</string>
    <string name="google">Google it</string>
    <string name="translate">Translate</string>

    <string name="retry">Retry</string>
    <string name="IS_FIRST_TIME_KEY">IS_FIRST_TIME</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="sign_in_msg">Sign in to use this feature.</string>
    <string name="signed_in_msg">Signed in as: </string>
    <string name="sign_in_failed">Failed to sign in.</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="about">About</string>
    <string name="recents">Recents</string>
    <string name="communicate">Communicate</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_msg">Logged out.</string>
</resources>