<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loading_root_view"
    android:layout_width="match_parent"
    android:focusable="true"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/loading_empty_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:focusable="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/search_something"
            android:src="@drawable/search_something" />

        <Button
            android:id="@+id/search_something_bv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:focusable="true"
            android:text="@string/search_something" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loading_fail_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:focusable="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/loading_fail_iv"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/load_failed"
            android:src="@drawable/ic_error_outline_black_24dp" />

        <Button
            android:id="@+id/load_retry_bv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:focusable="true"
            android:text="@string/retry" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loading_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:focusable="true"
        android:orientation="vertical">

        <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:indeterminate="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/loading" />
    </LinearLayout>


</RelativeLayout>