<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="48dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/search_items_icon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/search"
            android:maxHeight="48dp"
            android:padding="10dp"
            android:src="@drawable/ic_search_black_24dp"
            app:tint="#263238" />

        <TextView
            android:id="@+id/search_items_word"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp"
            android:textStyle="normal" />

        <ImageView
            android:id="@+id/search_items_action"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:alpha=".8"
            android:background="@drawable/circle_background"
            android:contentDescription="@string/action"
            android:maxHeight="48dp"
            android:padding="10dp"
            android:src="@drawable/ic_mic_black_24dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />
</LinearLayout>